# trackio

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: format.yml  publish.yml  test.yml
examples/: deploy-on-spaces.py  fake-training.py  persist-dataset-on-spaces.py  persist-dataset.py
tests/: test_basic.py  test_run.py  test_sqlite_storage.py
trackio/: README.md  __init__.py  cli.py  deploy.py  dummy_commit_scheduler.py  run.py  sqlite_storage.py  storage.py  ui.py  utils.py
trackio/examples/: fake-training.py
