[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trackio"
description = "A small Python library created to help developers protect their applications from Server Side Request Forgery (SSRF) attacks."
authors = [
    { name = "Abubakar Abid", email = "abubakar@hf.co" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "huggingface-hub",
    "gradio>=5.33.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/gradio-app/trackio"
repository = "https://github.com/gradio-app/trackio"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff==0.9.3"
]

[project.scripts]
trackio = "trackio.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["trackio"]

[tool.hatch.version]
path = "trackio/version.txt"
pattern = "^(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)
select = ["E", "F", "I"]
# Ignore line length violations
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use single quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
